added train layout, updated artwork for layoutblock, fixed a bug where layoutblocks could stack

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,16 +2,25 @@
 layoutblock-sm=Layout Block (Small)
 layoutblock-md=Layout Block (Med)
 layoutblock-lg=Layout Block (Large)
+layoutbelt=Layout Belt
+layoutinserter=Layout Inserter
+layouttrain=Layout Train
 
 [entity-name]
 layoutblock-sm=Layout Block (Small)
 layoutblock-md=Layout Block (Med)
 layoutblock-lg=Layout Block (Large)
+layoutbelt=Layout Belt
+layoutinserter=Layout Inserter
+layouttrain=Layout Train
 
 [item-description]
 layoutblock-sm=Layout Block (Small)
 layoutblock-md=Layout Block (Med)
 layoutblock-lg=Layout Block (Large)
+layoutbelt=Layout Belt
+layoutinserter=Layout Inserter
+layouttrain=Layout Train
 
 [technology-name]
 spaceplanner-research=Space Planner
